--- a/styles.css
+++ b/styles.css
@@ -75,9 +75,19 @@ li {
   color: #383d41;
   background: #e2e3e5;
   border-bottom: 1px solid #d6d8db;
+  
   flex-grow: 1;
   padding: 10px;
+  position: relative;
   resize: none;
+  z-index: 0;
+}
+
+.diary-input:focus {
+  z-index: 1;
+  /*
+  box-shadow: -500px 0 0 rgba(255, 0, 0, .4), 500px 0 0 rgba(255, 0, 0, .4);
+  */
 }
 /*
 .hour-past .diary-input {
@@ -106,6 +116,10 @@ li {
   border-radius: 0 10px 10px 0;
   cursor: pointer;
   width: 100px;
+}
+
+.hour-past .diary-input + .diary-save {
+  cursor: auto;
 }
 
 .diary-block:first-child .diary-hour,
